log
Thu 25 Apr 2024 02:54:13 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
cc6386c
Thu 25 Apr 2024 03:47:07 PM UTC: 
 hashmap.c | 36 ++++++++++++++++++++++++++++--------
 1 file changed, 28 insertions(+), 8 deletions(-)
 tests:  0|0
35f453e
Thu 25 Apr 2024 04:02:50 PM UTC: 
 hashmap.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
 tests:  0|0
b5eeeb3
Thu 25 Apr 2024 04:04:46 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
700f9b5
Thu 25 Apr 2024 04:09:02 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
316b158
Thu 25 Apr 2024 04:12:54 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
c7825dd
Thu 25 Apr 2024 04:15:04 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
238c49a
Thu 25 Apr 2024 11:52:36 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:74:8: error: unused variable ‘old_capacity’ [-Werror=unused-variable]
   74 |   long old_capacity = map->capacity;
      |        ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
892bc88
Thu 25 Apr 2024 11:53:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
44a1047
Thu 25 Apr 2024 11:55:08 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|1
total_score: 60/70
035c0cc
Fri 26 Apr 2024 12:03:06 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
a1fd888
Fri 26 Apr 2024 12:03:35 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
dfe7aa2
Fri 26 Apr 2024 12:03:51 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
2c57df4
Fri 26 Apr 2024 12:05:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
96e6113
